--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -6,7 +6,7 @@
   "default_locale": "en",
 
   "short_name": "Ubity Meet",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "minimum_chrome_version": "34",
   "icons": {
     "16": "ubity-logo-16x16.png",
@@ -22,7 +22,8 @@
   ],
   "externally_connectable": {
       "matches": [
-          "*://meet*.ubity.com/*"
+          "*://meet.ubity.com/*",
+          "*://meet.dev.ubity.com/*"
       ]
   }
 }
