record buffer into indexed db

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -16,13 +16,16 @@
   "background": {
         "scripts": [
             "background.js",
-            "recorder.js"
+            "recorder.js",
+            "storage.js",
+            "utils.js"
         ],
         "persistent": true
   },
   "permissions": [
       "tabs",
       "storage",
+      "unlimitedStorage",
       "desktopCapture",
       "declarativeContent"
   ],
